--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <script>
   var id = parseInt(location.search.substring(1));
-  location.replace(
-      'https://github.com/jasonzhoujc/jasonzhoujc.github.com/issues' +
-          (id ? '/' + id : '?labels=blog'));
+  // location.replace(
+  //     'https://github.com/jasonzhoujc/jasonzhoujc.github.com/issues' +
+  //         (id ? '/' + id : '?labels=blog'));
+  location.replace('https://github.com/jasonzhoujc/zhoujiancheng.github.com');
 </script>
